--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -48,7 +48,8 @@
         "INSERT-HKID": "請插入你的香港身份證。",
         "TIMMER": "剩餘時間",
         "LANGUAGE": "English",
-        "NAVIGATION": "步驟"
+        "NAVIGATION": "步驟",
+        "BACK": "上一頁"
     },
     "SCN-SRK-002-2": {
         "INSERT-HKID": "請插入你的香港身份證。",
