--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -97,7 +97,25 @@
         "PLACE-LEFT-FP": "請將你已登記的左手指紋放於\n掃描器上。",
         "TIMMER": "剩餘時間",
         "LANGUAGE": "English",
-        "NAVIGATION": "步驟"
+        "NAVIGATION": "步驟",
+        "NOT-CONFIRM": "Not Confirm",
+        "INFO-INCORRECT": "Are you sure the information is incorrect?",
+        "YES": "Yes",
+        "NO": "No",
+        "NOT-CONFIRM-MSG": "Please collect your Acknowledgement form/ID card, and go to collection counter.",
+        "NAME-IN-CHINESE": "Name in Chinese",
+        "NAME-IN-ENGLISH": "Name in English",
+        "NAME-IN-CCC": "Name in C.C.C.",
+        "DATE-OF-BIRTH": "Date of Birth",
+        "SYMBOLS": "Symbols",
+        "DATE-OF-ISSUE": "Date of Issue",
+        "OTHER-APPLICATIONS": "Other Applications",
+        "SEX": "Sex",
+        "MONTH-YEAR-REGISTRATION": "Month-Year of 1st Registration",
+        "ID-CARD-NO": "ID Card No.",
+        "COND-STAY": "Condition of Stay",
+        "LENGTH-STAY": "Length of Stay",
+        "CONFIRM-INFO": "Please confirm the information below:"
     },
     "SCN-SRK-009-1": {
         "STATEMENT-PURP-HEADER": "請向下移並閱讀有關收集個人資料的目的。於方格上打剔並按下”確認”按鈕以繼續程序。",
