--- a/src/assets/i18n/zh-HK.json
+++ b/src/assets/i18n/zh-HK.json
@@ -275,7 +275,13 @@
         "UPDATE-STAY-CONDITION-INFO": "更新逗留條件和逗留限制信息如下：",
         "CONDITION-OF-STAY": "逗留條件：",
         "LIMIT-OF-STAY": "逗留限制(DD-MM-YYYY)：",
-        "PROCESSING-READ": "正在讀卡，請稍等..."
+        "PROCESSING-READ": "正在讀卡，請稍等...",
+        "ABORT_CONFIRM": "你確定要中止？",
+        "YES": "是",
+        "NO": "否",
+        "PROCESSING": "處理中，請稍候。"
+
+
     },
     "SCN-GEN-VIEWCARD": {
         "LANGUAGE": "English",
