--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -292,6 +292,30 @@
         "INDICATE-CARD-TYPE": "Please indicate the type of HKID card you are holding:",
         "INSERT-HKID": "Please insert your HKID card.",
         "YES": "Yes",
-        "NO": "No"
+        "NO": "No",
+        "PROCESSING": "Processing, please wait.",
+        "NOT-CONFIRM": "Not Confirm",
+        "INFO-INCORRECT": "Are you sure the information is incorrect?",
+        "YES": "Yes",
+        "NO": "No",
+        "NEXT": "Next",
+        "NOT-CONFIRM-MSG": "Please collect your Acknowledgement form/ID card, and go to collection counter.",
+        "NAME-IN-CHINESE": "Name in Chinese",
+        "NAME-IN-ENGLISH": "Name in English",
+        "NAME-IN-CCC": "Name in C.C.C.",
+        "DATE-OF-BIRTH": "Date of Birth",
+        "SYMBOLS": "Symbols",
+        "DATE-OF-ISSUE": "Date of Issue",
+        "OTHER-APPLICATIONS": "Other Applications",
+        "SEX": "Sex",
+        "MONTH-YEAR-REGISTRATION": "Month-Year of 1st Registration",
+        "ID-CARD-NO": "ID Card No.",
+        "COND-STAY": "Condition of Stay",
+        "LENGTH-STAY": "Length of Stay",
+        "TIMMER": "Time Remaining",
+        "LANGUAGE": "中文",
+        "NAVIGATION": "Step",
+        "CONFIRM-INFO": "Below are the details inside your new HKID card:",
+        "CONFIRM": "Confirm"
     }
 }
